# OrletaRadzynPodlaski

./: .gitignore  LayoutParser.ipynb  README.md  pyproject.toml
notebooks/: Untitled.ipynb  classification_CV.ipynb
src/: LayoutParser.ipynb  Untitled.ipynb  dataclass.py  ensemble.py  layout_classification.ipynb  layout_parser.py  pipeline.py  text_classification.ipynb  utils.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
