[tool.poetry]
name = "orletaradzynpodlaski"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
torch = "^2.0.1"
huggingface = "^0.0.1"
pre-commit = "^3.3.1"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
